Bloco 2 Introdução ao ANTLR-20240229/bloco2/b2_05/Numbers.g4
grammar Numbers;
program:
        stat * EOF
    ;
stat:
        expr ? NEWLINE
    ;
expr:
    Number '-' Word
    ;
Number: [0-9]+('.'[0-9]+)?;
Word: [a-z]+;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
